--- a/charts/kubezero-logging/templates/secrets.yaml
+++ b/charts/kubezero-logging/templates/secrets.yaml
@@ -11,4 +11,4 @@ metadata:
 {{ include "kubezero-lib.labels" . | indent 4 }}
 data:
   username: {{ "elastic" | b64enc | quote }}
-  elastic: {{ .Values.es.elastic_password | b64enc | quote }}
+  elastic: {{ .Values.elastic_password | b64enc | quote }}
