--- a/charts/kubezero-logging/templates/servicemonitor.yaml
+++ b/charts/kubezero-logging/templates/servicemonitor.yaml
@@ -20,7 +20,7 @@ spec:
     path: /_prometheus/metrics
   selector:
     matchExpressions:
-      key: elasticsearch.k8s.elastic.co/statefulset-name
+    - key: elasticsearch.k8s.elastic.co/statefulset-name
       operator: DoesNotExist
     matchLabels:
       common.k8s.elastic.co/type: elasticsearch
