--- a/charts/kubezero/templates/logging.yaml
+++ b/charts/kubezero/templates/logging.yaml
@@ -3,6 +3,22 @@
   syncPolicy:
     automated:
       prune: true
+
+  ignoreDifferences:
+  - group: admissionregistration.k8s.io
+    kind: ValidatingWebhookConfiguration
+    jsonPointers:
+    - /webhooks/0/clientConfig/caBundle
+    - /webhooks/1/clientConfig/caBundle
+    - /webhooks/2/clientConfig/caBundle
+    - /webhooks/3/clientConfig/caBundle
+    - /webhooks/4/clientConfig/caBundle
+    - /webhooks/5/clientConfig/caBundle
+    - /webhooks/6/clientConfig/caBundle
+  - group: apiextensions.k8s.io
+    kind: CustomResourceDefinition
+    jsonPointers:
+    - /status
 ---
 apiVersion: v1
 kind: Namespace
