--- a/charts/kubezero-aws-ebs-csi-driver/charts/aws-ebs-csi-driver/Chart.yaml
+++ b/charts/kubezero-aws-ebs-csi-driver/charts/aws-ebs-csi-driver/Chart.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
-appVersion: "0.6.0"
-name: aws-ebs-csi-driver
+appVersion: 0.6.0
 description: A Helm chart for AWS EBS CSI Driver
-version: 0.5.0
-kubeVersion: ">=1.13.0-0"
 home: https://github.com/kubernetes-sigs/aws-ebs-csi-driver
-sources:
-  - https://github.com/kubernetes-sigs/aws-ebs-csi-driver
 keywords:
-  - aws
-  - ebs
-  - csi
+- aws
+- ebs
+- csi
+kubeVersion: '>=1.13.0-0'
 maintainers:
-  - name: leakingtapan
-    email: chengpan@amazon.com
+- email: chengpan@amazon.com
+  name: leakingtapan
+name: aws-ebs-csi-driver
+sources:
+- https://github.com/kubernetes-sigs/aws-ebs-csi-driver
+version: 0.5.0
