Make old ECK resources optional

--- a/charts/kubezero-logging/templates/kibana.yaml
+++ b/charts/kubezero-logging/templates/kibana.yaml
@@ -1,4 +1,5 @@
-{{- if .Values.kibana }}
+{{- if .Values.es.nodeSets }}
+# Only deploy Kibana if we have local ES cluster
 apiVersion: kibana.k8s.elastic.co/v1
 kind: Kibana
 metadata:
