--- a/charts/kubezero-logging/templates/secrets.yaml
+++ b/charts/kubezero-logging/templates/secrets.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.es.nodeSets }}
 apiVersion: v1
 kind: Secret
 type: Opaque
@@ -12,3 +13,4 @@ metadata:
 data:
   username: {{ "elastic" | b64enc | quote }}
   elastic: {{ .Values.elastic_password | b64enc | quote }}
+{{- end }}
