--- a/charts/kubezero-logging/templates/eck-operator.yaml
+++ b/charts/kubezero-logging/templates/eck-operator.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.es.nodeSets }}
 apiVersion: v1
 kind: Namespace
 metadata:
@@ -3056,3 +3057,4 @@ spec:
         secret:
           defaultMode: 420
           secretName: elastic-webhook-server-cert
+{{- end }}
