Add fluentd to logging

--- a/charts/kubezero-logging/values-all.yaml
+++ b/charts/kubezero-logging/values-all.yaml
@@ -29,3 +29,6 @@ kibana:
     enabled: true
     url: kibana.example.com
     gateway: istio-system/private-ingressgateway
+
+fluentd:
+  enabled: true
