--- a/charts/kubezero-logging/templates/fluentd/istio-service.yaml
+++ b/charts/kubezero-logging/templates/fluentd/istio-service.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: fluentd
+  name: {{ template "kubezero-lib.fullname" $ }}-fluentd
   namespace: {{ .Release.Namespace }}
   labels:
 {{ include "kubezero-lib.labels" . | indent 4 }}
@@ -16,13 +16,13 @@ spec:
     - port: 24224
     route:
     - destination:
-        host: fluentd
+        host: {{ template "kubezero-lib.fullname" $ }}-fluentd
         port:
           number: 24224
   http:
   - route:
     - destination:
-        host: fluentd
+        host: {{ template "kubezero-lib.fullname" $ }}-fluentd
         port:
           number: 9880
 {{- end }}
