Revert to default images

--- a/charts/kubezero-logging/values.yaml
+++ b/charts/kubezero-logging/values.yaml
@@ -29,9 +29,9 @@ kibana:
 
 fluentd:
   enabled: false
-  image:
-    repository: quay.io/fluentd_elasticsearch/fluentd
-    tag: v2.9.0
+  #image:
+  #  repository: quay.io/fluentd_elasticsearch/fluentd
+  #  tag: v2.9.0
   istio:
     enabled: false
 
