--- a/charts/kubezero-istio/templates/ingress-gateway.yaml
+++ b/charts/kubezero-istio/templates/ingress-gateway.yaml
@@ -29,6 +29,7 @@ spec:
       serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
       credentialName: public-ingress-cert
 
+{{- if .Values.ingress.private.enabled }}
 ---
 apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
@@ -78,3 +79,4 @@ spec:
       protocol: TCP
     hosts:
     - "*"
+{{- end }}
