Refactor argo apps factory

--- a/charts/kubezero/templates/aws-efs-csi-driver.yaml
+++ b/charts/kubezero/templates/aws-efs-csi-driver.yaml
@@ -1,3 +1,3 @@
 {{- if index .Values "aws-efs-csi-driver" "enabled" }}
-{{ template "kubezero-app.app" dict "root" . "name" "aws-efs-csi-driver" "type" "helm" }}
+{{ include "kubezero-app.app" . }}
 {{- end }}
