--- a/charts/kubezero/templates/cert-manager.yaml
+++ b/charts/kubezero/templates/cert-manager.yaml
@@ -1,5 +1,5 @@
 {{- if index .Values "cert-manager" "enabled" }}
-{{ template "kubezero-app.app" dict "root" . "name" "cert-manager" "type" "helm" "namespace" "cert-manager" }}
+{{ include "kubezero-app.app" . }}
 
 ---
 apiVersion: v1
