--- a/charts/kubezero/templates/calico.yaml
+++ b/charts/kubezero/templates/calico.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.calico.enabled }}
-{{ template "kubezero-app.app" dict "root" . "name" "calico" "type" "helm" "retain" true }}
+{{ include "kubezero-app.app" . }}
 
   ignoreDifferences:
   - group: apiextensions.k8s.io
