--- a/charts/kubezero/templates/istio.yaml
+++ b/charts/kubezero/templates/istio.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.istio.enabled }}
-{{ template "kubezero-app.app" dict "root" . "name" "istio" "type" "helm" }}
+{{ include "kubezero-app.app" . }}
 
   ignoreDifferences:
   - group: apiextensions.k8s.io
