--- a/charts/kubezero/templates/kiam.yaml
+++ b/charts/kubezero/templates/kiam.yaml
@@ -1,3 +1,3 @@
 {{- if index .Values "kiam" "enabled" }}
-{{ template "kubezero-app.app" dict "root" . "name" "kiam" "type" "helm" }}
+{{ include "kubezero-app.app" . }}
 {{- end }}
