--- a/charts/kubezero/templates/logging.yaml
+++ b/charts/kubezero/templates/logging.yaml
@@ -1,5 +1,5 @@
 {{- if index .Values "logging" "enabled" }}
-{{ template "kubezero-app.app" dict "root" . "name" "logging" "type" "helm" "namespace" "logging"}}
+{{ include "kubezero-app.app" . }}
 
   ignoreDifferences:
   - group: admissionregistration.k8s.io
