--- a/charts/kubezero/templates/metrics.yaml
+++ b/charts/kubezero/templates/metrics.yaml
@@ -1,5 +1,5 @@
 {{- if index .Values "metrics" "enabled" }}
-{{ template "kubezero-app.app" dict "root" . "name" "metrics" "type" "helm" "namespace" "monitoring"}}
+{{ include "kubezero-app.app" . }}
 ---
 apiVersion: v1
 kind: Namespace
