--- a/charts/kubezero-logging/Chart.yaml
+++ b/charts/kubezero-logging/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: kubezero-logging
 description: KubeZero Umbrella Chart for complete EFK stack
 type: application
-version: 0.2.0
+version: 0.3.1
 appVersion: 1.2.1
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
@@ -22,4 +22,9 @@ dependencies:
     version: 2.5.1
     repository: https://kubernetes-charts.storage.googleapis.com/
     condition: fluentd.enabled
+  - name: fluent-bit
+    version: 0.6.3
+    repository: https://zero-down-time.github.io/kubezero/
+    # repository: https://fluent.github.io/helm-charts
+    condition: fluent-bit.enabled
 kubeVersion: ">= 1.16.0"
