--- a/charts/kubezero-logging/values.yaml
+++ b/charts/kubezero-logging/values.yaml
@@ -125,7 +125,7 @@ fluentd:
         id_key id
         remove_keys id
 
-        # This pipeline incl. eg. GeoIP
+        # KubeZero pipeline incl. GeoIP etc.
         pipeline fluentd
 
         host "#{ENV['OUTPUT_HOST']}"
@@ -193,3 +193,109 @@ fluentd:
 #        </grok>
 #      </parse>
 #    </filter>
+
+
+fluent-bit:
+  enabled: true
+  test:
+    enabled: false
+
+  config:
+    outputs: |
+      [OUTPUT]
+          Match *
+          Name forward
+          Host fluentd
+          Port 24224
+          tls on
+          tls.verify off
+          Shared_Key cloudbender
+
+    inputs: |
+      [INPUT]
+          Name tail
+          Path /var/log/containers/*.log
+          Parser cri
+          Tag kube.*
+          Mem_Buf_Limit 5MB
+          Skip_Long_Lines On
+          Refresh_Interval 10
+          DB /var/log/flb_kube.db
+          DB.Sync Normal
+
+    filters: |
+      [FILTER]
+          Name kubernetes
+          Match kube.*
+          Merge_Log On
+          Keep_Log Off
+          K8S-Logging.Parser On
+          K8S-Logging.Exclude On
+
+      [FILTER]
+          Name    lua
+          Match   kube.*
+          script  /fluent-bit/etc/functions.lua
+          call    dedot
+
+    customParsers: |
+      [PARSER]
+          # http://rubular.com/r/tjUt3Awgg4
+          Name cri
+          Format regex
+          Regex ^(?<time>[^ ]+) (?<stream>stdout|stderr) (?<logtag>[^ ]*) (?<log>.*)$
+          Time_Key    time
+          Time_Format %Y-%m-%dT%H:%M:%S.%L%z
+          # Decode_Field_As json log
+
+    service: |
+      [SERVICE]
+          Flush 5
+          Daemon Off
+          Log_Level warn
+          Parsers_File parsers.conf
+          Parsers_File custom_parsers.conf
+          HTTP_Server On
+          HTTP_Listen 0.0.0.0
+          HTTP_Port 2020
+
+    lua: |
+      function dedot(tag, timestamp, record)
+          if record["kubernetes"] == nil then
+              return 0, 0, 0
+          end
+          dedot_keys(record["kubernetes"]["annotations"])
+          dedot_keys(record["kubernetes"]["labels"])
+          return 1, timestamp, record
+      end
+
+      function dedot_keys(map)
+          if map == nil then
+              return
+          end
+          local new_map = {}
+          local changed_keys = {}
+          for k, v in pairs(map) do
+              local dedotted = string.gsub(k, "%.", "_")
+              if dedotted ~= k then
+                  new_map[dedotted] = v
+                  changed_keys[k] = true
+              end
+          end
+          for k in pairs(changed_keys) do
+              map[k] = nil
+          end
+          for k, v in pairs(new_map) do
+              map[k] = v
+          end
+      end
+
+  serviceMonitor:
+    enabled: true
+    namespace: monitoring
+    selector:
+      release: metrics
+
+  tolerations:
+  - key: node-role.kubernetes.io/master
+    effect: NoSchedule
