--- a/charts/kubezero-istio/values.yaml
+++ b/charts/kubezero-istio/values.yaml
@@ -9,8 +9,9 @@ ingress:
   private:
     enabled: true
     nodeSelector: "31080_31443_30671_30672_31224"
-  #dnsNames:
-  #- "*.example.com"
+  dnsNames:
+    - "*.example.com"
+    - "fck.me"
 
 istio-operator:
   hub: docker.io/istio
