--- a/charts/kubezero-logging/templates/eck/servicemonitor.yaml
+++ b/charts/kubezero-logging/templates/eck/servicemonitor.yaml
@@ -10,9 +10,7 @@ metadata:
 spec:
   endpoints:
   - basicAuth:
-      username:
-        name: {{ template "kubezero-lib.fullname" $ }}-es-elastic-user
-        key: username
+      username: elastic
       password:
         name: {{ template "kubezero-lib.fullname" $ }}-es-elastic-user
         key: elastic
