Revert ES fixes as servicemonitor is retarted

--- a/charts/kubezero-logging/templates/eck/secrets.yaml
+++ b/charts/kubezero-logging/templates/eck/secrets.yaml
@@ -12,4 +12,5 @@ metadata:
 {{ include "kubezero-lib.labels" . | indent 4 }}
 data:
   elastic: {{ .Values.elastic_password | b64enc | quote }}
+  username: {{ "elastic" | b64enc | quote }}
 {{- end }}
