--- a/charts/kubezero-logging/templates/eck/servicemonitor.yaml
+++ b/charts/kubezero-logging/templates/eck/servicemonitor.yaml
@@ -10,7 +10,9 @@ metadata:
 spec:
   endpoints:
   - basicAuth:
-      username: elastic
+      username:
+        name: {{ template "kubezero-lib.fullname" $ }}-es-elastic-user
+        key: username
       password:
         name: {{ template "kubezero-lib.fullname" $ }}-es-elastic-user
         key: elastic
