More fluentd tuning

--- a/charts/kubezero-logging/values.yaml
+++ b/charts/kubezero-logging/values.yaml
@@ -149,12 +149,11 @@ fluentd:
           path /var/log/fluentd-buffers/kubernetes.system.buffer
           flush_mode interval
           flush_thread_count 2
-          flush_interval 5s
+          flush_interval 30s
           flush_at_shutdown true
           retry_type exponential_backoff
           retry_timeout 60m
-          chunk_limit_size "#{ENV['OUTPUT_BUFFER_CHUNK_LIMIT']}"
-          queue_limit_length "#{ENV['OUTPUT_BUFFER_QUEUE_LIMIT']}"
+          chunk_limit_size 16M
           overflow_action drop_oldest_chunk
         </buffer>
       </match>
