Move scrape username to its own secret as eck operator cleans up otherwise

--- a/charts/kubezero-logging/templates/eck/secrets.yaml
+++ b/charts/kubezero-logging/templates/eck/secrets.yaml
@@ -12,5 +12,18 @@ metadata:
 {{ include "kubezero-lib.labels" . | indent 4 }}
 data:
   elastic: {{ .Values.elastic_password | b64enc | quote }}
+---
+apiVersion: v1
+kind: Secret
+type: Opaque
+metadata:
+  labels:
+    common.k8s.elastic.co/type: elasticsearch
+    elasticsearch.k8s.elastic.co/cluster-name: {{ template "kubezero-lib.fullname" $ }}
+  name: {{ template "kubezero-lib.fullname" $ }}-es-elastic-username
+  namespace: {{ .Release.Namespace }}
+  labels:
+{{ include "kubezero-lib.labels" . | indent 4 }}
+data:
   username: {{ "elastic" | b64enc | quote }}
 {{- end }}
