--- a/charts/kubezero-logging/templates/eck/servicemonitor.yaml
+++ b/charts/kubezero-logging/templates/eck/servicemonitor.yaml
@@ -11,7 +11,7 @@ spec:
   endpoints:
   - basicAuth:
       username:
-        name: {{ template "kubezero-lib.fullname" $ }}-es-elastic-user
+        name: {{ template "kubezero-lib.fullname" $ }}-es-elastic-username
         key: username
       password:
         name: {{ template "kubezero-lib.fullname" $ }}-es-elastic-user
