--- a/charts/kubezero-logging/values.yaml
+++ b/charts/kubezero-logging/values.yaml
@@ -31,7 +31,7 @@ fluentd:
   enabled: false
   image:
     repository: quay.io/fluentd_elasticsearch/fluentd
-    tag: v2.9.0
+    tag: v3.0.4
   istio:
     enabled: false
 
@@ -158,7 +158,15 @@ fluentd:
         </buffer>
       </match>
 
-#  filter.conf: |
+    filter.conf: |
+      <filter kube.*>
+        key_name message
+        remove_key_name_field true
+        <parse>
+          @type json
+        </parse>
+      </filter>
+
 #    <filter auth system.auth>
 #      @type parser
 #      key_name message
