Fix fluentd typo

--- a/charts/kubezero-logging/values.yaml
+++ b/charts/kubezero-logging/values.yaml
@@ -160,6 +160,7 @@ fluentd:
 
     filter.conf: |
       <filter kube.*>
+        @type parser
         key_name message
         remove_key_name_field true
         <parse>
